<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewIndicator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="top|bottom"

    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp"

            android:text="@string/ingredient_text" />


        <TextView
            android:id="@+id/textView1"
            style="@style/detailIngredientTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:focusableInTouchMode="true"
            tools:text="Ingredients" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/steps_text" />

        <android.support.v7.widget.RecyclerView

            android:id="@+id/recipeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
